[package]
name = "captsone-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
http-body-util = "0.1.2"
hyper = { version = "1.5.1", features = ["full"] }
hyper-util = { version = "0.1.10", features = ["tokio"] }
# hyper = { version = "0.14.25", features = ["full"] }
thiserror = "2.0.3"
tokio = { version = "1.26.0", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
